CHANGES IN VERSION 1.44.1
-------------------------

BUG FIXES

    o `seqMerge()` should internally use "chr_position_ref_alt" to distinguish
      the variants in different files

    o `seqAddValue(, varnm="annotation/filter")` should work with a factor
      variable

    o `seqAddValue(, varnm="variant.id")` can reset the variant IDs with a
      different number of the variants


CHANGES IN VERSION 1.44.0
-------------------------

UTILITIES

    o tweak the display of progress information in `seqVCF2GDS()`

    o `seqVCF_Header(, getnum=TRUE, verbose=TRUE)` to show the progress
      information for scanning the VCF file

    o new `seqGetData(, "$dosage_alt2")` and `seqGetData(, "$dosage_sp2")` for
      sex chromosomes, when the alleles are partially missing (e.g., genotypes
      on chromosome X for males)

    o new 'verbose.clean' in `seqExport()` to control how much information to
      be displayed


CHANGES IN VERSION 1.42.4
-------------------------

BUG FIXES

    o `seqGetData(, "$dosage_alt")` and `seqGetData(, "$dosage_sp")` work
      correctly when the ploidy is >2 and there are missing alleles

    o fix a bug that `seqParallel()` does not call a user-defined '.combine'
      when 'parallel=1'


CHANGES IN VERSION 1.42.1
-------------------------

UTILITIES

    o update the help files of `seqBlockApply()` and `seqUnitApply()`

    o detect the output filename extension in `seqGDS2VCF()` without
      considering the case of the characters, supporting .gz, .bgz, .bz and .xz
      as a filename extension

    o fix the compiler warning: -Wformat-security

    o new option 'include.pheno=TRUE' in `seqBED2GDS()`


CHANGES IN VERSION 1.42.0
-------------------------

UTILITIES

    o new option 'write.rsid' in `seqGDS2BED()`


CHANGES IN VERSION 1.40.1
-------------------------

BUG FIXES

    o `seqAddValue(gdsfile, varnm="position")` works correctly


CHANGES IN VERSION 1.40.0
-------------------------
